# ibkr-web-oapi

./: config.yml  justfile  pyproject.toml
ibkr-web-oapi/: README.md  pyproject.toml
ibkr-web-oapi/ibkr_web/: __init__.py
ibkr-web-oapi/ibkr_web/models/: __init__.py  abandon_account.py  account.py  account_account_type.py  account_base_currency.py  account_brokerage_service_codes_item.py  account_capabilities_item.py  account_close_instruction.py  account_close_instruction_withdrawal_info.py  account_close_instruction_withdrawal_info_bank_instruction_method.py  account_configuration.py  account_configuration_type.py  account_data.py  account_data_capabilities.py  account_data_fee_template.py  account_data_mailing.py  account_data_registered_address.py  account_data_stock_yield_program.py  account_data_tax_ids_item.py  account_data_tax_treaty_details_item.py  account_details_response.py  account_details_response_decedents_item.py  account_details_response_financial_information.py  account_details_response_financial_information_additional_property.py  account_details_response_market_data_item.py  account_details_response_sources_of_wealth_item.py  account_details_response_sources_of_wealth_item_additional_property.py  account_details_response_with_holding_statement.py  account_investment_objectives_item.py  account_ira_type.py  account_management_requests.py  account_management_requests_payload.py  account_rep.py  account_status_bulk_response.py  account_status_request.py  account_status_request_status.py  account_status_response.py  account_summary_response.py  (+787 more)
(+103 files in other folders)
