[tool.poetry]
name = "ibkr-web-oapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.21.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
